# selenium-docker-template

./: Dockerfile  docker-compose.yml  pyproject.toml
sel_docker/: main.py  requirements.txt
